--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <img src="./src/img/logo-bulat.png" width="80px" alt="Logo">
             </div>
             <h2 class="text-dark lg:text-3xl sm:text-2xl mb-8 font-semibold">
-                <span>Future <br></span>
-                Sustainable Development <span><br>Leaders</span>
+                <span>Sustainable Development<br></span>
+                Future Leaders
             </h2>
             <p class="text-primary text-lg mb-8">Facilitator Bootcamp</p>
 
@@ -30,8 +30,9 @@
                 <p class="font-semibold lg:text-lg sm:text-sm text-white">Des 2024 to Feb 2025</p>
             </div>
         </div>
-        <div class="col-span-1 flex justify-center items-center">
-            <img class="w-[200px] h-auto object-contain" src="./src/img/arimbi-bicara.png" alt="image">
+        <!-- <div class="col-span-1 flex justify-center items-center"> -->
+        <div class="max-w-full flex items-center justify-center rounded-lg">
+            <img class="w-[400px] h-auto object-contain mt-8 rounded-lg" src="src/img/gambar-atas.jpg" alt="image">
         </div>
         <div class="max-w-full flex justify-center mt-8">
             <a href="#form"
@@ -195,7 +196,7 @@
                 <!-- Timeline 1 -->
                 <div data-aos="fade-up" data-aos-duration="600"
                     class="col-start-1 row-start-1 px-6 py-6 bg-white shadow-lg border-l-4 md:border-l-0 md:border-r-4 border-blue-500 relative rounded-lg transition-transform duration-300 hover:-translate-y-2">
-                    <h1 class="text-2xl font-semibold text-dark mb-2">Sept - Nov 2024 </h1>
+                    <h1 class="text-2xl font-semibold text-dark mb-2">1 Sept - 17 Nov 2024 </h1>
                     <p class="text-xl text-dark mb-4 font-semibold">Pendaftaran</p>
                     <div
                         class="hidden md:block w-6 h-6 bg-blue-500 rounded-full absolute top-0 right-[-15px] transform translate-y-[-50%]">
@@ -208,7 +209,7 @@
                 <!-- Timeline 2 -->
                 <div data-aos="fade-up" data-aos-duration="600"
                     class="md:col-start-2 row-start-2 px-6 py-6 bg-white shadow-lg border-l-4 border-green-500 relative rounded-lg transition-transform duration-300 hover:-translate-y-2">
-                    <h1 class="text-2xl font-semibold text-green-600 mb-2">Nov 2024</h1>
+                    <h1 class="text-2xl font-semibold text-green-600 mb-2">2 Nov - 26 Nov 2024 </h1>
                     <p class="text-xl text-dark mb-4 font-semibold">Seleksi Peserta</p>
                     <div
                         class="w-6 h-6 bg-green-500 rounded-full absolute top-0 left-[-15px] transform translate-y-[-50%]">
@@ -218,7 +219,7 @@
                 <!-- Timeline 3 -->
                 <div data-aos="fade-up" data-aos-duration="600"
                     class="col-start-1 row-start-3 px-6 py-6 bg-white shadow-lg border-l-4 md:border-l-0 md:border-r-4 border-red-500 relative rounded-lg transition-transform duration-300 hover:-translate-y-2">
-                    <h1 class="text-2xl font-semibold text-red-600 mb-2">Nov - Des 2024</h1>
+                    <h1 class="text-2xl font-semibold text-red-600 mb-2">2 Des - 18 Des 2024</h1>
                     <p class="text-xl text-dark mb-4 font-semibold">Onboarding<span class="text-slate-400">
                             (Online, Desember*)</span></p>
                     <div
