--- a/index.html
+++ b/index.html
@@ -270,9 +270,9 @@
     </div>
 
     <!-- Update -->
-    <div class="update-section">
-        <div class="header">
-            <h2>📢Update</h2>
+    <div div data-aos="fade-up" data-aos-duration="600" class="update-section">
+        <div div data-aos="fade-up" data-aos-duration="600" class="header">
+            <h2 >📢Update</h2>
             <a href="https://bootcamp.sekolahfasilitasi.com/" target="_blank" rel="noopener noreferrer"><h4>Facilitator Bootcamp</h4></a>
             <div class="sub-header">
                 <div class="logo">
@@ -286,8 +286,8 @@
             </div>
         </div>
         
-        <div class="articles">
-            <div class="article-card">
+        <div div data-aos="fade-up" data-aos-duration="600" class="articles">
+            <div div data-aos="fade-up" data-aos-duration="600" class="article-card">
                 <img src="src/img/upd_1.png" alt="Thumbnail 1" class="thumbnail">
                 <div class="article-info">
                     <span>22 Oct 2024 | Event</span>
@@ -296,7 +296,7 @@
                     <a href="https://fn.sekolahfasilitasi.com/event.php?event_id=1" target="_blank" rel="noopener noreferrer"class="button-link">Laman event</a>
                 </div>
             </div>
-            <div class="article-card">
+            <div div data-aos="fade-up" data-aos-duration="600" class="article-card">
                 <img src="src/img/upd_2.png" alt="Thumbnail 2" class="thumbnail">
                 <div class="article-info">
                     <span>14 Oct 2024 | Artikel</span>
@@ -305,7 +305,7 @@
                     <a href="https://medium.com/@sekolahfasilitasi/skala-partisipasi-partisipasi-pun-ada-tingkatannya-780a2ac38e2e" target="_blank" rel="noopener noreferrer" class="button-link">Baca di Medium</a>
                 </div>
             </div>
-            <div class="article-card">
+            <div div data-aos="fade-up" data-aos-duration="600" class="article-card">
                 <img src="src/img/upd_3.png" alt="Thumbnail 3" class="thumbnail">
                 <div class="article-info">
                     <span>10 Oct 2024 | Artikel</span>
@@ -314,7 +314,7 @@
                     <a href="https://medium.com/@sekolahfasilitasi/fasilitasi-itu-gampang-asal-kamu-tahu-prinsip-dan-fokusnya-d4d88705a3eb" target="_blank" rel="noopener noreferrer" class="button-link">Baca di Medium</a>
                 </div>
             </div>
-            <div class="article-card">
+            <div div data-aos="fade-up" data-aos-duration="600" class="article-card">
                 <img src="src/img/upd_4.png" alt="Thumbnail 4" class="thumbnail">
                 <div class="article-info">
                     <span>04 Oct 2024 | Artikel</span>
