--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <div id="home" class="max-w-full 2xl:py-12 sm:py-8 bg-bg">
         <!-- text -->
         <div class="max-w-full text-center items-center">
-            <div class="flex justify-center mb-8">
-                <img src="./src/img/logo-bulat.png" width="80px" alt="Logo"> 
-                <img src="./src/img/TAL Logo.png" width="80px" alt="Logo" class="ml-4"> <!-- Added `ml-4` -->
-            </div>                      
+            <div class="logo-home">
+                <img src="./src/img/logo-bulat.png"> 
+                <img src="./src/img/TAL Logo.png">
+            </div>
             <h2 class="text-dark lg:text-3xl sm:text-2xl mb-8 font-semibold">
                 <span>Sustainable Development<br></span>
                 Future Leaders
@@ -337,27 +337,29 @@
     </div>
 
     <!-- footer -->
-    <footer class="bg-gray-800 text-white py-6" data-aos="fade-up" data-aos-duration="600">
-        <div class="container mx-auto flex flex-col items-center space-y-6">
-            <div class="flex flex-row space-x-12 justify-center items-start">
-            <!-- Logo -->
-                <div class="flex flex-col items-center space-y-2">
-                    <img src="src/img/logo_sf_nav.png" alt="Logo" class="h-24 w-auto">
-                    <p class="text-center leading-relaxed">Mitra belajar profesional Indonesia
-                        <br>untuk menjadi fasilitator dan
-                        <br>praktisi fasilitasi yang kompeten
-                        <br>dan berpengalaman
+    <footer class="footer" data-aos="fade-up" data-aos-duration="600">
+        <div class="container">
+            <div class="logos">
+                <!-- Logo -->
+                <div class="logo-section">
+                    <img src="src/img/logo_sf_nav.png" alt="Logo">
+                    <p>
+                        Mitra belajar profesional Indonesia
+                        <br> untuk menjadi fasilitator dan
+                        <br> praktisi fasilitasi yang kompeten
+                        <br> dan berpengalaman
                     </p>
                     <a href="https://www.sekolahfasilitasi.com" target="_blank">www.sekolahfasilitasi.com</a>
                 </div>
-
-                <!-- second logo -->
-                <div class="flex flex-col items-center space-y-2">
-                    <img src="src/img/TAL Logo.png" alt="second Logo" class="h-24 w-auto">
-                    <p class="text-center leading-relaxed">Tanah Air Lestari mencetak pemimpin yang
-                        <br>dapat memfasilitasi kerja gotong royong
-                        <br>untuk mewujudkan ekonomi restoratif melalui
-                        <br>peningkatan kapasitas dan fasilitasi
+    
+                <!-- Second Logo -->
+                <div class="logo-section">
+                    <img src="src/img/TAL Logo.png" alt="Second Logo">
+                    <p>
+                        Tanah Air Lestari mencetak pemimpin yang
+                        <br> dapat memfasilitasi kerja gotong royong
+                        <br> untuk mewujudkan ekonomi restoratif melalui
+                        <br> peningkatan kapasitas dan fasilitasi
                     </p>
                     <a href="http://tanahair.co.id" target="_blank">www.tanahair.co.id</a>
                 </div>
