--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <h2
                         class="text-dark lg:text-4xl md:text-3xl sm:text-lg font-semibold 2xl:leading-[40px] sm:leading-[28px] mb-4 lg:text-start sm:text-center">
                         Kamu peduli pada berbagai isu terkait sustainable development?
-                    </h2>       
+                    </h2>
                 </div>
 
                 <!-- gambar -->
@@ -123,17 +123,15 @@
                     </p>
                     <p
                         class="text-gray-600 font-medium text-sm sm:text-base md:text-lg lg:text-start sm:text-center mt-4">
-                        Dalam Bootcamp 3 bulan
-                        ini, kamu akan belajar memfasilitasi aksi pembangunan berkelanjutan.
+                        Dalam Bootcamp 3 bulan ini, kamu akan belajar memfasilitasi aksi pembangunan berkelanjutan.
                     </p>
                     <p
                         class="text-gray-600 font-medium text-sm sm:text-base md:text-lg lg:text-start sm:text-center mt-4">
                         Daftar dan jadi bagian dari generasi pemimpin masa depan!
                     </p>
                 </div>
-
-
             </div>
+
             <div class="w-full flex justify-center items-center space-y-4 mt-8 sm:flex-row sm:space-x-4 sm:space-y-0">
                 <a href="#form"
                     class="flex w-20 sm:w-[200px] h-[50px] bg-primary text-white rounded-full hover:bg-white border border-primary hover:text-primary transition duration-300 justify-center items-center font-semibold 2xl:text-[20px] sm:text-[18px]">
@@ -222,7 +220,7 @@
                     class="col-start-1 row-start-3 px-6 py-6 bg-white shadow-lg border-l-4 md:border-l-0 md:border-r-4 border-red-500 relative rounded-lg transition-transform duration-300 hover:-translate-y-2">
                     <h1 class="text-2xl font-semibold text-red-600 mb-2">2 Des - 18 Des 2024</h1>
                     <p class="text-xl text-dark mb-4 font-semibold">Onboarding<span class="text-slate-400">
-                            (Online, Desember*)</span></p>
+                            (Online)</span></p>
                     <div
                         class="hidden md:block w-6 h-6 bg-red-500 rounded-full absolute top-0 right-[-15px] transform translate-y-[-50%]">
                     </div>
@@ -278,11 +276,6 @@
                 <div class="logo">
                     <a href="https://bootcamp.sekolahfasilitasi.com/" target="_blank" rel="noopener noreferrer"><img src="src/img/facilitator_bootcamp_header.png" alt="Facilitator Bootcamp Logo"></a>
                 </div>
-                <!-- <div class="title-text">
-                    <h3>Sustainable Development Future Leaders</h3>
-                    <p>Sep 2024 - Feb 2025</p>
-                    <p>A Facilitator Bootcamp by Sekolah Fasilitasi</p>
-                </div> -->
             </div>
         </div>
         
