--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
         <!-- text -->
         <div class="max-w-full text-center items-center">
             <div class="logo-home">
-                <img src="./src/img/logo-bulat.png"> 
-                <img src="./src/img/TAL Logo.png">
+                <div class="logo-container-1">
+                    <img src="./src/img/logo-bulat.png">
+                </div>
+                <div class="logo-container">
+                    <img src="./src/img/TAL Color Black.png">
+                </div>
             </div>
             <h2 class="text-dark lg:text-3xl sm:text-2xl mb-8 font-semibold">
                 <span>Sustainable Development<br></span>
@@ -347,12 +351,12 @@
     
                 <!-- Second Logo -->
                 <div class="logo-section">
-                    <img src="src/img/TAL Logo.png" alt="Second Logo">
+                    <img src="src/img/TAL Color Black.png" alt="Second Logo">
                     <p>
-                        Tanah Air Lestari mencetak pemimpin yang
-                        <br> dapat memfasilitasi kerja gotong royong
-                        <br> untuk mewujudkan ekonomi restoratif melalui
-                        <br> peningkatan kapasitas dan fasilitasi
+                        Gerakan yang berfokus pada menciptakan
+                        <br> ruang dialog kolaboratif serta mencetak
+                        <br> pemimpin yang mampu memfasilitasi kerja
+                        <br> gotong royong untuk mewujudkan ekonomi restoratif.
                     </p>
                     <a href="http://tanahair.co.id" target="_blank">www.tanahair.co.id</a>
                 </div>
