updated logo color

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
     
                 <!-- Second Logo -->
                 <div class="logo-section">
-                    <img src="src/img/TAL Color Black.png" alt="Second Logo">
+                    <img src="src/img/TAL Color White.png" alt="Second Logo">
                     <p>
                         Gerakan yang berfokus pada menciptakan
                         <br> ruang dialog kolaboratif serta mencetak
