--- a/index.html
+++ b/index.html
@@ -321,6 +321,9 @@
                     <a href="https://medium.com/@sekolahfasilitasi/jadilah-fasilitator-perubahan-peranmu-dalam-aksi-pembangunan-berkelanjutan-b2cb911c06d3" target="_blank" rel="noopener noreferrer" class="button-link">Baca di Medium</a>
                 </div>
             </div>
+            <div class="iframe-container">
+                <iframe src="https://fn.sekolahfasilitasi.com/event.php" height="400" width="500" title="FN Update"></iframe>
+            </div>
         </div>
     </div>
                 
